--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
-# dependencies
-node_modules
-
-# production
-/build
-/dist
-/logs
-
-/public
-
-# local env files
-.env*
-!.env.example
+*.log
+.DS_Store
+.env
+.env.backup
+.env.production
+.phpactor.json
+.phpunit.result.cache
+/.fleet
+/.idea
+/.nova
+/.phpunit.cache
+/.vscode
+/.zed
+/auth.json
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+/vendor
+Homestead.json
+Homestead.yaml
+Thumbs.db
